opengl: Correct transformation order in GLTexture::render()

First, the texture-to-buffer transform has to be applied, then the y
axis should be flipped. Doing it vice versa changes the winding order
of rotation transforms.

Also the screenshot plugin uses incorrect render transform. Since
convertFromGLImage() undoes the render target's transform, the color
space transformation pass should use the same transform, not the
inverted one.

BUG: 479934


(cherry picked from commit f23e0ef05babff4b5f13aa13e6bdcc4447eb3255)